# editor

./: .config.yml  .gitignore  Cargo.toml  README.md
src/: action.rs  buffer.rs  command.rs  config.rs  highlight.rs  input.rs  main.rs  old_action.rs  rect.rs  render.rs  utils.rs  view.rs  window.rs
src/highlight/: language.rs  mod.rs
test_files/: test.txt
