[package]
name = "editor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "*"
regex = "*"
lazy_static = "*"
ropey = "1.3.2"
tree-sitter-highlight = "0.20.1"
tree-sitter-rust = "0.20.1"
tree-sitter-toml = "*"
serde = "*"
